--- a/packages/plugin-ext/package.json
+++ b/packages/plugin-ext/package.json
@@ -6,7 +6,6 @@
   "typings": "lib/common/index.d.ts",
   "dependencies": {
     "@theia/core": "^0.3.16",
-    "@theia/debug-nodejs": "^0.3.16",
     "@theia/editor": "^0.3.16",
     "@theia/filesystem": "^0.3.16",
     "@theia/monaco": "^0.3.16",
@@ -18,7 +17,8 @@
     "jsonc-parser": "^2.0.2",
     "lodash.clonedeep": "^4.5.0",
     "ps-tree": "1.1.0",
-    "vscode-uri": "^1.0.1"
+    "vscode-uri": "^1.0.1",
+    "uuid": "^3.2.1"
   },
   "publishConfig": {
     "access": "public"
