--- a/package.json
+++ b/package.json
@@ -4,17 +4,17 @@
   "version": "0.0.0",
   "engines": {
     "yarn": "1.0.x || >=1.2.1",
-    "node": ">=7.9.0"
+    "node": ">=10.12.11"
   },
   "resolution": {
-    "**/@types/node": "8.10.20"
+    "**/@types/node": "10.12.11"
   },
   "devDependencies": {
     "@types/chai": "^4.0.1",
     "@types/chai-string": "^1.4.0",
     "@types/jsdom": "^11.0.4",
     "@types/mocha": "^2.2.41",
-    "@types/node": "8.10.20",
+    "@types/node": "10.12.11",
     "@types/sinon": "^2.3.5",
     "@types/temp": "^0.8.29",
     "@types/webdriverio": "^4.7.0",
@@ -29,6 +29,7 @@
     "jsdom": "^11.5.1",
     "lerna": "^2.2.0",
     "mocha": "^3.4.2",
+    "node-abi": "^2.5.0",
     "nyc": "^11.0.3",
     "remap-istanbul": "^0.9.5",
     "rimraf": "^2.6.1",
@@ -40,10 +41,10 @@
     "typedoc": "^0.13.0",
     "typescript": "^3.1.3",
     "uuid": "^3.1.0",
-    "wdio-mocha-framework": "0.5.9",
-    "wdio-selenium-standalone-service": "0.0.8",
+    "wdio-mocha-framework": "0.6.4",
+    "wdio-selenium-standalone-service": "0.0.11",
     "wdio-spec-reporter": "0.1.0",
-    "webdriverio": "4.9.2"
+    "webdriverio": "4.14.1"
   },
   "scripts": {
     "prepare": "yarn prepare:travis && yarn prepare:hoisting && yarn rebuild:clean && yarn build:clean",
