Implement open link command
Signed-off-by: Mykola Morhun <mmorhun@redhat.com>

--- a/packages/plugin-ext-vscode/package.json
+++ b/packages/plugin-ext-vscode/package.json
@@ -10,7 +10,8 @@
   },
   "theiaExtensions": [
     {
-      "backend": "lib/node/plugin-vscode-backend-module"
+      "backend": "lib/node/plugin-vscode-backend-module",
+      "frontend": "lib/browser/plugin-vscode-frontend-module"
     }
   ],
   "keywords": [
