Add search result information to search-in-workspace
Included search result information for the `search-in-workspace` widget,
displaying both result and file count

Signed-off-by: Vincent Fugnitto <vincent.fugnitto@ericsson.com>

--- a/packages/search-in-workspace/package.json
+++ b/packages/search-in-workspace/package.json
@@ -9,6 +9,8 @@
     "@theia/navigator": "^0.3.17",
     "@theia/process": "^0.3.17",
     "@theia/workspace": "^0.3.17",
+    "@types/lodash.debounce": "4.0.3",
+    "lodash.debounce": "^4.0.8",
     "vscode-ripgrep": "^1.2.4"
   },
   "publishConfig": {
